--- a/russian.tex
+++ b/russian.tex
@@ -138,7 +138,7 @@
 
   \textbf{Участник хакатона \href{https://nuclearhack.mephi.ru/}{Nuclear
   IT Hack}}, где моя команда 48 часов работала
-  над кейсом Росатома: сервис для определения эмоционального тона онлайн-встреч.
+  над кейсом Росатома: AI сервис для определения эмоционального тона онлайн-встреч.
 
   \vspace{-7mm}
 
