--- a/russian.tex
+++ b/russian.tex
@@ -168,7 +168,7 @@
   \href{https://github.com/alchemmist/.dotfiles/tree/main/nvim}{конфиг}
   и цветовую
   \href{https://github.com/alchemmist/nothing.nvim}{тему}.
-  Написал 598 строчек кастомных
+  Написал более 20 кастомных
   \href{https://github.com/alchemmist/.dotfiles/tree/main/scripts}{скриптов}.
 
   \vfill
