move name to header; some recomposition

--- a/russian.tex
+++ b/russian.tex
@@ -11,14 +11,20 @@
 % TODO: сплющить проекты с одинаковым стеком технологий
 % TODO: про стартап нписать, поговорить с Марком чтоб его заопенсорсить
 % TODO: во ВСЕХ readme должны быть скрины
+% TODO: попробывать опыт вынести в начало
+% TODO: в шапке сузить: backend (python, go)
+% TODO: сделать, 3 резюме: под python, под go, и общее -- то которе сейчас
+% TODO: выбрать несколько жирных проектов и их расписать подробнее
+% TODO: убрать даты там где не надо
+% TODO: махнуть местами месатми достижения и сертификаты
+% TODO:
 
 \begin{document}
 
-{\vspace*{-13mm}\sc \large Гришин Антон --- Backend разработчик} \\
+{\vspace*{-13mm}\sc \large Гришин Антон — Backend разработчик} \\
 \begin{resume}
   \begin{minipage}[t]{0.55\textwidth}
     \section{\mysidestyle Персональная\\Информация}
-    Гришин Антон \\
     Москва, Россия \\
     \faGithub  \space
     \href{https://github.com/alchemmist/}{\texttt{alchemmist}} \\
@@ -33,26 +39,29 @@
   \end{minipage}
 
   \begin{minipage}[H]{0.18\textwidth}
-    \begin{textblock}{7}(10.84, 1.37)
-      \includegraphics[width=0.27\textwidth]{images/avatar.png}
+    \begin{textblock}{7}(10.96, 1.30)
+      \includegraphics[width=0.255\textwidth]{images/avatar.png}
     \end{textblock}
   \end{minipage}
 
   \vspace{-7mm}
   \section{\mysidestyle Обо мне}
-  Я студент, начинающий разрабтчик. Программирую 4 года, за
+  Я студент, начинающий разработчик. Программирую 4 года, за
   это время участвовал в разработке 44 репозиториев, отправил 921
-  коммит и написал 176729 строчек кода. В прошлом профессиональный
+  коммит и написал 176729 строчек кода.
+  \href{https://www.avito.ru/moskva/predlozheniya_uslug/prepodavatel_programmirovaniya_na_python_2556461612}{Преподаю}
+  Python, обучил $> 30$ учеников. Сооснователь и
+  разработчик в \href{https://ballkit.ru/}{Баллкит}. В прошлом профессиональный
   \href{https://github.com/alchemmist/CV/blob/main/attachments/sport.pdf}{волейболист}.
-  Также я
-  \href{https://www.avito.ru/moskva/predlozheniya_uslug/prepodavatel_programmirovaniya_na_python_2556461612}{преподаватель}
-  Python, за все время обучил $> 30$ учеников. Сооснователь и
-  разработчик в \href{https://ballkit.ru/}{Баллкит}.
+
+  \section{\mysidestyle Образование}
+  \href{https://centraluniversity.ru/}{Центральный Университет} —
+  Математика и компьютерные науки, 2028 \textit{(1 курс)}. Направление «Разработка». Траектория «Computer Science Research».
+  % TODO: уточнить трек
 
   \section{\mysidestyle Навыки}
 
-  \vspace{0.5mm}
-
+  \vspace{0.4mm}
   \begin{description}[leftmargin=0pt, itemindent=*]
     \item[Python:] \hangindent=9mm \hangafter=1
       \inlinecode{FastAPI}, \inlinecode{pydantic},
@@ -71,10 +80,6 @@
       \inlinecode{Make}, \inlinecode{CI/CD}, \inlinecode{Linux},
       \inlinecode{Git}
   \end{description}
-
-  \section{\mysidestyle Образование}
-  \href{https://centraluniversity.ru/}{Центральный Университет} —
-  Математика и компьютерные науки, 2028 \textit{(1 курс)}.
 
   \section{\mysidestyle Сертификаты}
   \textbf{Яндекс Лицей}. Экстерном поступил на 2-й курс
@@ -127,7 +132,7 @@
   \textbf{\href{https://github.com/alchemmist/CV/blob/main/attachments/scince-for-life-win.pdf}{Победитель}
   научно-практической конференции}
   «\href{https://conf.profil.mos.ru/academ}{Наука для
-  жизни}» среди 117 проектв с
+  жизни}» среди 117 проектов с
   \href{https://github.com/smart-cab/}{проектом умного
   дома} для частных и государственных
   образовательных учреждений. Технический стек: \inlinecode{Redis},
@@ -137,6 +142,7 @@
 
   \hfill \textsl{Апрель 2024}
 
+  \vspace{-2mm}
   \textbf{Участник хакатона \href{https://nuclearhack.mephi.ru/}{Nuclear
   IT Hack}}, где моя команда 48 часов работала
   над кейсом Росатома: AI сервис для определения эмоционального тона
@@ -385,7 +391,7 @@
       \hspace{35mm}
       \hypersetup{urlcolor=gray!90}
       \large
-      \href{https://github.com/alchemmist}{→ больше проектв на
+      \href{https://github.com/alchemmist}{→ больше проектов на
       \underline{GitHub}}
       \endgroup
     \end{textblock}
