move all tex to tex dir; change attachments host to github pages

--- a/tex/long-eng.tex
+++ b/tex/long-eng.tex
@@ -33,7 +33,7 @@
 
   \begin{minipage}[H]{0.18\textwidth}
     \begin{textblock}{7}(10.84, 1.37)
-      \includegraphics[width=0.27\textwidth]{images/avatar.png}
+      \includegraphics[width=0.27\textwidth]{../images/avatar.png}
     \end{textblock}
   \end{minipage}
 
@@ -42,7 +42,7 @@
   I am a student and an aspiring developer. I have been programming
   for 4 years, during which I contributed to 44 repositories, made
   921 commits, and wrote 176,729 lines of code. Former professional
-  \href{https://github.com/alchemmist/CV/blob/main/attachments/sport.pdf}{volleyball
+  \href{https://alchemmist.github.io/CV/attachments/sport.pdf}{volleyball
   player}. I am also a
   \href{https://www.avito.ru/moskva/predlozheniya_uslug/prepodavatel_programmirovaniya_na_python_2556461612}{Python
   instructor}, having taught over 30 students. Co-founder and
@@ -80,7 +80,7 @@
   \href{https://lyceum.yandex.ru/}{Yandex Academy Lyceum} in
   "Industrial Development." Solved 236 problems, implemented and
   defended 3 projects, scored 100/100 on the final. Graduated with
-  \href{https://github.com/alchemmist/CV/blob/main/attachments/yandex-lyceum.pdf}{honors}.
+  \href{https://alchemmist.github.io/CV/attachments/yandex-lyceum.pdf}{honors}.
 
   \vspace{-6mm}
 
@@ -89,7 +89,7 @@
   \textbf{Python Course}. Completed the
   \href{https://stepik.org/course/67}{Stepik course} on
   \inlinecode{Python}, solving 71 exercises and finishing with
-  \href{https://github.com/alchemmist/CV/blob/main/attachments/stepik-python-course.pdf}{distinction}.
+  \href{https://alchemmist.github.io/CV/attachments/stepik-python-course.pdf}{distinction}.
 
   \vspace{-7mm}
 
@@ -98,7 +98,7 @@
   \section{\mysidestyle Achievements}
   Finalist of the \textbf{Russian Championship} in competitive
   programming (among 5000 participants). Developed a
-  \href{https://github.com/alchemmist/CV/blob/main/attachments/architect.pdf}{microservice
+  \href{https://alchemmist.github.io/CV/attachments/architect.pdf}{microservice
   architecture} of 9 services for a
   \href{https://github.com/alchemmist/sportprog}{web application}
   aggregating sports events across Russia. Also created an
