--- a/tex/long-rus.tex
+++ b/tex/long-rus.tex
@@ -16,8 +16,6 @@
 % TODO: сделать, 3 резюме: под python, под go, и общее -- то которе сейчас
 % TODO: выбрать несколько жирных проектов и их расписать подробнее
 % TODO: убрать даты там где не надо
-% TODO: махнуть местами месатми достижения и сертификаты
-% TODO:
 
 \begin{document}
 
@@ -40,7 +38,7 @@
 
   \begin{minipage}[H]{0.18\textwidth}
     \begin{textblock}{7}(10.96, 1.30)
-      \includegraphics[width=0.255\textwidth]{images/avatar.png}
+      \includegraphics[width=0.255\textwidth]{../images/avatar.png}
     \end{textblock}
   \end{minipage}
 
@@ -52,7 +50,7 @@
   \href{https://www.avito.ru/moskva/predlozheniya_uslug/prepodavatel_programmirovaniya_na_python_2556461612}{Преподаю}
   Python, обучил $> 30$ учеников. Сооснователь и
   разработчик в \href{https://ballkit.ru/}{Баллкит}. В прошлом профессиональный
-  \href{https://github.com/alchemmist/CV/blob/main/attachments/sport.pdf}{волейболист}.
+  \href{https://alchemmist.github.io/CV/attachments/sport.pdf}{волейболист}.
 
   \section{\mysidestyle Образование}
   \href{https://centraluniversity.ru/}{Центральный Университет} —
@@ -85,11 +83,11 @@
   \section{\mysidestyle Достижения}
   Прошёл в
   \textbf{финал}
-  (\href{https://github.com/alchemmist/CV/blob/main/attachments/russian-chemp-final.pdf}{\texttt{1}})
+  (\href{https://alchemmist.github.io/CV/attachments/russian-chemp-final.pdf}{\texttt{1}})
   \href{https://events.fsp-russia.com/championship}{Чемпионата
   России} по спортивному
   программированию, среди 5000 участников. Разработал
-  \href{https://github.com/alchemmist/CV/blob/main/attachments/architect.pdf}{микросервисную
+  \href{https://alchemmist.github.io/CV/attachments/architect.pdf}{микросервисную
   архитектуру} из 9 сервисов для
   \href{https://github.com/alchemmist/sportprog}{веб-приложения},
   агрегирующего спортивные события по
@@ -108,7 +106,7 @@
 
   \hfill \textsl{Декабрь 2024}
 
-  \textbf{\href{https://github.com/alchemmist/CV/blob/main/attachments/scince-for-life-win.pdf}{Победитель}
+  \textbf{\href{https://alchemmist.github.io/CV/attachments/scince-for-life-win.pdf}{Победитель}
   научно-практической конференции}
   «\href{https://conf.profil.mos.ru/academ}{Наука для
   жизни}» среди 117 проектов с
@@ -131,7 +129,7 @@
 
   \hfill \textsl{Апрель 2024}
 
-  \textbf{\href{https://github.com/alchemmist/CV/blob/main/attachments/informatics-olimpic.pdf}{Призёр}
+  \textbf{\href{https://alchemmist.github.io/CV/attachments/informatics-olimpic.pdf}{Призёр}
   3-й степени}, олимпиады МПГУ по информатике:
   «Прикладная информатика»
   \vspace{-2mm}
@@ -143,7 +141,7 @@
   \href{https://lyceum.yandex.ru/}{Лицея
   Академии Яндекса} по «Промышленной Разработке». Решил 236 задач,
   реализовал и защитил 3 проекта, финальный на 100/100 баллов. Окончил с
-  \href{https://github.com/alchemmist/CV/blob/main/attachments/yandex-lyceum.pdf}{аттестатом
+  \href{https://alchemmist.github.io/CV/attachments/yandex-lyceum.pdf}{аттестатом
   с отличием}.
 
   \vspace{-6mm}
@@ -154,7 +152,7 @@
   \href{https://stepik.org/course/67}{курс} по \inlinecode{Python} на
   Stepik. Выполнил 71
   здание и завершил его с
-  \href{https://github.com/alchemmist/CV/blob/main/attachments/stepik-python-course.pdf}{отличием}.
+  \href{https://alchemmist.github.io/CV/attachments/stepik-python-course.pdf}{отличием}.
 
   \vspace{-7mm}
 
