add resume for go

--- a/tex/long-eng.tex
+++ b/tex/long-eng.tex
@@ -1,5 +1,7 @@
 \documentclass[margin,line]{resume}
 
+\definecolor{sidebarcolor}{RGB}{47,79,79} % forest - nice
+
 \usepackage[utf8]{inputenc}
 \usepackage[english,russian]{babel}
 \usepackage[T1]{fontenc}
