--- a/tex/long-rus.tex
+++ b/tex/long-rus.tex
@@ -1,5 +1,7 @@
 \documentclass[margin,line]{resume}
 
+\definecolor{sidebarcolor}{RGB}{47,79,79} % forest - nice
+
 \usepackage[utf8]{inputenc}
 \usepackage[english,russian]{babel}
 \usepackage[T1]{fontenc}
@@ -61,7 +63,7 @@
   \section{\mysidestyle Навыки}
 
   \vspace{0.4mm}
-  \begin{description}[leftmargin=0pt, itemindent=*]
+  \begin{description}[leftmargin=0pt, itemindent=*, itemsep=0.2pt]
     \item[Python:] \hangindent=9mm \hangafter=1
       \inlinecode{FastAPI}, \inlinecode{pydantic},
       \inlinecode{Flask},
