add resume for python

--- a/tex/go-rus.tex
+++ b/tex/go-rus.tex
@@ -1,8 +1,11 @@
 \documentclass[margin,line]{resume}
 
+% yellow:
 % \definecolor{sidebarcolor}{RGB}{204, 153, 0}
-\definecolor{sidebarcolor}{RGB}{189, 155, 50}
-% \definecolor{sidebarcolor}{RGB}{203, 172, 70}
+% \definecolor{sidebarcolor}{RGB}{189, 155, 50}
+
+% blue:
+\definecolor{sidebarcolor}{RGB}{0, 49, 83}
 
 \usepackage[utf8]{inputenc}
 \usepackage[english,russian]{babel}
@@ -87,11 +90,6 @@
   \inlinecode{RabbitMQ (FastStream)},
   \inlinecode{FastAPI},
   \inlinecode{OAuth}.
-  % TODO: вложить хакатон на github и добавить ссылку
-
-  \vspace{-6mm}
-
-  \hfill \textsl{Декабрь 2024}
 
   \textbf{\href{https://alchemmist.github.io/CV/attachments/scince-for-life-win.pdf}{Победитель}
   научно-практической конференции}
@@ -102,17 +100,17 @@
   образовательных учреждений. Технический стек: \inlinecode{Redis},
   \inlinecode{Zigbee2MQTT}, \inlinecode{websockets}, \inlinecode{Go},
   \inlinecode{Python}, \inlinecode{Flask}, \inlinecode{React}.
-  \vspace{-6mm}
 
-  \hfill \textsl{Апрель 2024}
 
+  \textbf{\href{https://alchemmist.github.io/CV/attachments/informatics-olimpic.pdf}{Призёр}
+  3-й степени}, олимпиады МПГУ по информатике:
+  «Прикладная информатика»
   \vspace{-2mm}
-
   \section{\mysidestyle Опыт}\vspace{2mm}
 
   \begin{description}
 
-    \item[Patch Loyalty]\small Программа лояльности для малого бизнеса \hfill
+    \item[Patch Loyalty] Программа лояльности для малого бизнеса \hfill
       \textsl{Июль 2024 — Август 2024\vspace{1mm}}\\
       Разработал бота в Telegram по модели SMB (Single Message Bot) на
       \inlinecode{Go} для коробочной системы лояльности
